# demotool

./: .gitignore  CMakeLists.txt  ClipArrangement.cpp  ClipArrangement.h  Demotool.pro  README.md  cliparrangement.ui  demo.cpp  demo.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  openglwindow.cpp  openglwindow.h
data/shader/: LightShader.frag  PBRShader.frag  loading.frag  quad.vert  shader.frag  shader.geom  shader.vert  voronoi.frag
src/: Engine.cpp  Engine.h  Material.cpp  Material.h  ShaderProgram.cpp  ShaderProgram.h
src/demo/: Clip.cpp  Clip.h  Demo.cpp  Demo.h  Timeline.cpp  Timeline.h  timelinecursor.cpp  timelinecursor.h  timelineitem.cpp  timelineitem.h  timelinemodel.cpp  timelinemodel.h  timelineview.cpp  timelineview.h
src/midi/: AkaiAPC40MkII.cpp  AkaiAPC40MkII.h  MidiController.cpp  MidiController.h  ValueControl.cpp  ValueControl.h
src/modelling/: Cylinder.cpp  Cylinder.h  Geometry.cpp  Geometry.h  Plane.cpp  Plane.h  Sphere.cpp  Sphere.h  Tetraeder.cpp  Tetraeder.h
src/scene/: Camera.cpp  Camera.h  Scene.cpp  Scene.h  SceneObject.cpp  SceneObject.h  ShaderOnlyScene.cpp  ShaderOnlyScene.h  Transform.cpp  Transform.h
src/scene/light/: DirectionalLight.cpp  DirectionalLight.h  ILightSource.cpp  ILightSource.h  PointLight.cpp  PointLight.h
test/: ValueControlTest.cpp
